--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,7 @@ body {
 
   /* contact section */
   .contact-container {
-    @apply relative z-10 sm:px-10 px-5 mt-2 sm:-mt-5;
+    @apply relative sm:px-10 px-5 mt-5 sm:-mt-5 sm:mb-20 xl:mb-0;
   }
 
   .field-label {
